--- a/css/shors-algo.webflow.css
+++ b/css/shors-algo.webflow.css
@@ -49,12 +49,14 @@ a {
 .section {
   width: 100%;
   height: auto;
+  object-fit: contain;
   background-color: #1c0e3f;
   background-image: linear-gradient(#1c0e3f, #3d2663 58%, #5120a2);
   flex-direction: column;
   justify-content: center;
   align-items: center;
   display: flex;
+  overflow: auto;
 }
 
 .section.center {
