--- a/css/shors-algo.webflow.css
+++ b/css/shors-algo.webflow.css
@@ -47,9 +47,8 @@ a {
 }
 
 .section {
-  width: 100%;
+  width: auto;
   height: auto;
-  object-fit: contain;
   background-color: #1c0e3f;
   background-image: linear-gradient(#1c0e3f, #3d2663 58%, #5120a2);
   flex-direction: column;
@@ -431,7 +430,7 @@ a {
   max-width: 700px;
   text-align: center;
   padding-top: 20px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 .title {
@@ -882,14 +881,50 @@ a {
 
 .paragraph-2 {
   color: #fff;
+  flex: 0 auto;
 }
 
-.paragraph-3, .text-block-4 {
+.paragraph-3 {
   color: #acacac;
+}
+
+.text-block-4 {
+  color: #fff;
+  object-fit: contain;
+  font-size: 16px;
+  overflow: auto;
 }
 
 .paragraph-4 {
   color: #000;
+}
+
+.paragraph-5 {
+  color: #fff;
+}
+
+.heading-4 {
+  color: #fd9404;
+}
+
+.bold-text {
+  color: #ae0c00;
+}
+
+.paragraph-6, .paragraph-7, .paragraph-8 {
+  color: #fff;
+}
+
+.heading-5 {
+  color: #fd9404;
+}
+
+.heading-6 {
+  margin-top: 20px;
+}
+
+.html-embed {
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 991px) {
@@ -1199,6 +1234,10 @@ a {
   .heading-3 {
     font-size: 42px;
     line-height: 56px;
+  }
+
+  .paragraph-3 {
+    text-align: center;
   }
 }
 
